added price_type to listing
