# app/Enums/PriceType.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Enums;
+
+enum PriceType: string
+{
+    case PER_PERSON    = 'per_person';
+    case PER_APARTMENT = 'per_apartment';
+
+    public function label(): string
+    {
+        return match ($this) {
+            self::PER_PERSON    => 'С человека',
+            self::PER_APARTMENT => 'За апартаменты',
+        };
+    }
+}
